--- a/de12/test.html
+++ b/de12/test.html
@@ -2,21 +2,47 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>XBPのページ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <!-- h1.htmlからある行をコピペしてくればOK -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>見出し</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
+         <div>
+             ああああああああ<br>
+             12345678<br>
+             いいいいいい
+         </div>
 
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
+         画像を表示(30%)<br>
+         <img src="images/testimage.png" width="30%"><br>
+         画像を表示(40%)<br>
+         <img src="images/testimage.png" width="40%"><br>
+         画像を表示(80%)<br>
+         <img src="images/testimage.png" width="80%"><br>
+         画像を表示(30%)<br>
+         <img src="images/0_XBlogo.png" width="30%"><br>
 
          <!-- ③↓に箇条書きをしてみよう -->
+         <ol>
+             <li>ああああああああああ</li>
+             <li>いいいいいいいいいい</li>
+         </ol>
+         <ul>
+             <li>ああああああああああ</li>
+             <li>いいいいいいいいいい</li>
+         </ul>
 
          <!-- ④↓に外部リンクを作ってみよう -->
+         <a href="index.html">デザイン演習Ⅰ・Ⅱトップページ</a><br>
+         <a href="../index.html">XBPトップページ</a><br>
+         <a href="https://www.yahoo.co.jp/" target="_blank">Yahoo</a><br>
+         <a href="files/test.pdf" target="_brank">pdfファイル</a>
 
     </div>
 
